--- a/picturegame/adminpanel.css
+++ b/picturegame/adminpanel.css
@@ -1,14 +1,14 @@
 /* CSS for PictureGame extension's admin panel */
 .admin-container {
-	margin: 10px 0px 0px 0px;
-	padding: 10px 0px 0px 0px;
+	margin: 10px 0 0 0;
+	padding: 10px 0 0 0;
 	border-top: 1px solid #dcdcdc;
 	width: 700px;
 }
 
 .admin-row {
-	padding: 0px 0px 10px 0px;
-	margin: 0px 0px 10px 0px;
+	padding: 0 0 10px 0;
+	margin: 0 0 10px 0;
 	border-bottom: 1px solid #dcdcdc;
 	width: 700px;
 }
@@ -25,7 +25,7 @@
 }
 
 .admin-image p {
-	margin: 3px 0px 3px 0px !important;
+	margin: 3px 0 3px 0 !important;
 }
 
 .admin-controls {
