--- a/picturegame/gallery.css
+++ b/picturegame/gallery.css
@@ -10,7 +10,7 @@
 }
 
 #lightboxText {
-	color: white;
+	color: #fff;
 	width: auto;
 }
 
@@ -26,7 +26,7 @@
 	width: 100%;
 	height: 500px;
 	/* background-image: url(/images/overlay.png); */
-	background-color: black;
+	background-color: #000;
 	filter: alpha(opacity=80);
 	opacity: .8;
 }
@@ -37,20 +37,20 @@
 }
 
 .picgame-gallery-navigation p {
-	margin: 0px 0px 3px 0px;
+	margin: 0 0 3px 0;
 	font-weight: bold;
 }
 
 .picgame-gallery-container {
 	float: left;
 	width: 750px;
-	margin-top: 10px 0px 0px 0px;
+	margin-top: 10px 0 0 0;
 }
 
 .picgame-gallery-navigation h1 {
-	margin: 0px 0px 10px 0px !important;
-	color: #333333;
-	padding: 0px 0px 3px 0px;
+	margin: 0 0 10px 0 !important;
+	color: #333;
+	padding: 0 0 3px 0;
 	border-bottom: 1px solid #dcdcdc;
 	font-size: 16px;
 	font-weight: bold;
@@ -63,23 +63,23 @@
 .picgame-gallery-thumbnail {
 	float: left;
 	padding: 5px 5px 10px 5px;
-	margin: 0px 15px 15px 0px;
-	border: 1px solid #D7DEE8;
-	background-color: #F2F4F7;
+	margin: 0 15px 15px 0;
+	border: 1px solid #d7dee8;
+	background-color: #f2f4f7;
 	min-height: 149px;
 	width: 200px;
 	cursor: pointer;
 }
 
 .picgame-gallery-navigation h1 {
-	margin: 10px 0px 10px 0px !important;
+	margin: 10px 0 10px 0 !important;
 	font-size: 13px;
 	font-weight: bold;
 	color: #b9bfc7;
 }
 
 .picgame-gallery-container h1 {
-	margin: 0px 0px 10px 0px !important;
+	margin: 0 0 10px 0 !important;
 	font-size: 13px;
 	font-weight: bold;
 	color: #b9bfc7;
@@ -87,12 +87,12 @@
 
 .picgame-gallery-thumbnailimg {
 	float: left;
-	margin: 0px 10px 0px 0px;
+	margin: 0 10px 0 0;
 	text-align: center;
 }
 
 .picgame-gallery-thumbnailimg p {
-	margin: 8px 0px 0px 0px;
+	margin: 8px 0 0 0;
 	font-size: 13px;
 	font-weight: bold;
 	color: #BBBFC7;
@@ -100,28 +100,28 @@
 
 .picgame-gallery-thumbnailimg img {
 	border: 1px solid #dcdcdc;
-	background-color: #ffffff;
+	background-color: #fff;
 	padding: 3px;
 }
 
 .imgTitle {
 	font-size: 26px;
 	font-weight: bold;
-	font-family: arial;
-	margin: 0px 0px 20px 0px;
+	font-family: Arial;
+	margin: 0 0 20px 0;
 }
 
 .imgCaption {
 	font-size: 16px;
-	color: #ffffff;
+	color: #fff;
 	font-weight: bold;
-	margin: 0px 0px 10px 0px;
+	margin: 0 0 10px 0;
 }
 
 .imgContainer {
 	vertical-align: top;
 	float: left;
-	margin: 0px 20px 0px 0px;
+	margin: 0 20px 0 0;
 }
 
 .imageOne, .imageTwo {
@@ -131,13 +131,18 @@
 	background-color:#ffffff; */
 }
 
-.imageOne { background-color: #4B9AF6; }
-.imageTwo { background-color: #FF1800; }
+.imageOne {
+	background-color: #4b9af6;
+}
+
+.imageTwo {
+	background-color: #ff1800;
+}
 
 .credit-box {
-	color: #ffffff;
+	color: #fff;
 	font-size: 12px;
-	margin: 0px 0px 15px 0px;
+	margin: 0 0 15px 0;
 	font-weight: bold;
 }
 
@@ -153,7 +158,7 @@
 	font-family: Arial;
 	font-size: 12px;
 	font-weight: bold;
-	margin: 10px 0px 0px 0px;
+	margin: 10px 0 0 0;
 }
 
 .voteStats img {
@@ -162,8 +167,8 @@
 
 .voteStats h1 {
 	font-size: 14px;
-	color: #ffffff;
-	margin: 0px 0px 10px 0px !important;
+	color: #fff;
+	margin: 0 0 10px 0 !important;
 }
 
 .vote-thumbnail img {
@@ -172,28 +177,28 @@
 }
 
 .vote-percent {
-	margin: 0px 10px 0px 10px;
+	margin: 0 10px 0 10px;
 }
 
 .vote-bar {
-	margin: 0px 0px 10px 0px;
+	margin: 0 0 10px 0;
 	vertical-align: middle;
 }
 
 .vote-red img {
-	border-bottom: 2px solid #000000;
-	border-right: 2px solid #000000;
+	border-bottom: 2px solid #000;
+	border-right: 2px solid #000;
 	border-top: 2px solid #f0b4ab;
 }
 
 .vote-blue img {
-	border-bottom: 2px solid #000000;
-	border-right: 2px solid #000000;
+	border-bottom: 2px solid #000;
+	border-right: 2px solid #000;
 	border-top: 2px solid #82c3ff;
 }
 
 .picgame-lightboxcontainer {
-	background-color: #333333;
+	background-color: #333;
 	opacity: 0.9;
 	-moz-opacity: 0.9;
 	filter: alpha(opacity=90);
@@ -207,6 +212,6 @@
 }
 
 body {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 }
