--- a/picturegame/startgame.css
+++ b/picturegame/startgame.css
@@ -6,7 +6,8 @@ h1.firstHeading {
 	color: red;
 	font-weight: bold;
 }
-.imageOneUpload, .imageTwoUpload {
+.imageOneUpload,
+.imageTwoUpload {
 	float: left;
 	width: 420px;
 }
@@ -36,16 +37,19 @@ h1.firstHeading {
 }
 
 .uploadTitle {
-	margin: 0px 0px 18px 0px;
+	margin: 0 0 18px 0;
 }
 
-.imageOneUpload h1, .imageTwoUpload h1, .uploadTitle h1, .uploadedImages h1 {
+.imageOneUpload h1,
+.imageTwoUpload h1,
+.uploadTitle h1,
+.uploadedImages h1 {
+	border: 0;
+	color: #333;
 	font-size: 16px;
-	color: #333333;
-	border: none;
 	font-weight: bold;
-	padding: 0px 0px 5px 0px;
-	margin: 0px 0px 10px 0px !important;
+	padding: 0 0 5px 0;
+	margin: 0 0 10px 0 !important;
 }
 
 .imageOne, .imageTwo {
@@ -53,33 +57,35 @@ h1.firstHeading {
 	width: 200px;
 }
 
-.imageOne img, .imageTwo img {
+.imageOne img,
+.imageTwo img {
 	border: 1px solid #dcdcdc;
 	padding: 3px;
 }
 
-.imageOne p, .imageTwo p {
-	margin: 0px 0px 5px 0px !important;
+.imageOne p,
+.imageTwo p {
+	margin: 0 0 5px 0 !important;
 	font-size: 12px;
 }
 
 .pick-game-welcome-message {
-	background-color: #F2F4F7;
-	border: 1px solid #D7DEE8;
-	margin: 0px 0px 25px;
+	background-color: #f2f4f7;
+	border: 1px solid #d7dee8;
 	padding: 8px;
+	margin: 0 0 25px;
 	width: 500px;
 }
 
 .pick-game-welcome-message h1 {
-	font-family: arial;
+	border: 0;
+	font-family: Arial;
 	font-size: 20px;
 	font-weight: bold;
-	border: none;
-	padding: 0px;
-	margin: 0px 0px 10px 0px !important;
+	padding: 0;
+	margin: 0 0 10px 0 !important;
 }
 
 .startButton {
-	margin: 10px 0px 0px 0px;
+	margin: 10px 0 0 0;
 }
