Implement hover effect via CSS, not via JS
Improves no-JS support and is generally speaking the sane(r) approach.

Bug: T248390
Change-Id: I004199797d8c1718793b5ba1fe263c45cf37ecb9

--- a/resources/css/gallery.css
+++ b/resources/css/gallery.css
@@ -71,6 +71,10 @@
 	cursor: pointer;
 }
 
+.picgame-gallery-thumbnail:hover {
+	background-color: #ff1800;
+}
+
 .picgame-gallery-navigation h1 {
 	margin: 10px 0 10px 0 !important;
 	font-size: 13px;
